Prefer valueOf to constructors for numeric types