@@ -17,16 +17,16 @@ public class Total<T extends Number> {
 
     public T getOtherTotal() {
         if (total instanceof Float) {
-            return (T)new Float(total.floatValue() - pageTotal.floatValue());
+            return (T)Float.valueOf(total.floatValue() - pageTotal.floatValue());
         }
         if (total instanceof Double) {
-            return (T)new Double(total.doubleValue() - pageTotal.doubleValue());
+            return (T)Double.valueOf(total.doubleValue() - pageTotal.doubleValue());
         }
         if (total instanceof Integer) {
-            return (T)new Integer(total.intValue() - pageTotal.intValue());
+            return (T)Integer.valueOf(total.intValue() - pageTotal.intValue());
         }
         if (total instanceof Long) {
-            return (T)new Long(total.longValue() - pageTotal.longValue());
+            return (T)Long.valueOf(total.longValue() - pageTotal.longValue());
         }
         throw new IllegalArgumentException("Unsupported numeric type");
     }
